<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.fragments.login.LoginFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/login_et"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/content_desc_txt"
        android:scaleType="centerCrop"
        android:src="@drawable/img_login_bg" />

    <TextView
        android:id="@+id/hello_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/hello_txt"
        android:textColor="@color/blue"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/hello_tv"
        android:layout_alignStart="@id/hello_tv"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/title_txt"
        android:textColor="@color/blue"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/login_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_tv"
        android:layout_marginTop="60dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/bg_rounded_et"
        android:drawableStart="@drawable/ic_search"
        android:drawablePadding="8dp"
        android:hint="@string/login_txt"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="12dp"
        android:textColorHint="#5E54C5"
        android:textSize="16sp" />
    <EditText
        android:id="@+id/password_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_et"
        android:layout_marginTop="6dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/bg_rounded_et"
        android:drawableStart="@drawable/ic_search"
        android:drawablePadding="8dp"
        android:hint="@string/password_txt"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="12dp"
        android:textColorHint="#5E54C5"
        android:textSize="16sp"
        tools:ignore="TextFields" />


    <ImageButton
        android:id="@+id/btnCircle"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/ic_signout"
        android:background="@drawable/bg_circle_button"
        android:contentDescription="@string/arrow_button"
        android:adjustViewBounds="true"
        android:scaleType="center"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="100dp"
        />


    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/progress_bar"
        android:visibility="gone"/>

</RelativeLayout>