<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_margin="4dp"
    android:layout_height="54dp"
    android:background="@drawable/bg_item_orders">

    <ImageView
        android:id="@+id/item_user_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:src="@drawable/img_human"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/item_msg_txt"
        android:textColor="@color/blue"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/item_user_image"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_desc_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/item_desc_txt"
        android:textColor="@color/grey"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/item_user_name"
        app:layout_constraintTop_toBottomOf="@id/item_user_name" />

    <TextView
        android:id="@+id/item_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/bg_search_button"
        android:backgroundTint="#F4F4F4"
        android:fontFamily="@font/poppins_bold"
        android:paddingHorizontal="8dp"
        android:text="@string/item_msg_time_txt"
        android:textColor="#999999"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="SmallSp" />


</androidx.constraintlayout.widget.ConstraintLayout>